# editor-framework

./: Cargo.toml  NEOVIEW_MCP_SUMMARY.md  README.md  claude.md
crates/ef-app/: Cargo.toml
crates/ef-app/src/: main.rs
crates/ef-core/: Cargo.toml
crates/ef-core/src/: lib.rs
crates/ef-lua/: Cargo.toml
crates/ef-lua/src/: api.rs  lib.rs  runtime.rs
crates/ef-lua/tests/: api_test.rs  runtime_test.rs
crates/ef-pm/: Cargo.toml
crates/ef-pm/src/: lib.rs  manager.rs
crates/ef-pm/tests/: manager_test.rs
crates/ef-widgets/: Cargo.toml
crates/ef-workspace/: Cargo.toml
docs/plans/: 2026-03-08-editor-framework-design.md  2026-03-08-editor-framework-implementation.md
examples/: init.lua
plugins/welcome/: init.lua  plugin.toml
