[package]
name = "ef-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ef"
path = "src/main.rs"

[dependencies]
ef-core = { path = "../ef-core" }
ef-lua = { path = "../ef-lua" }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
smol = "2"
